增加了登录对话框 连接了一些槽和信号

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1215</width>
-    <height>726</height>
+    <width>1200</width>
+    <height>750</height>
    </rect>
   </property>
   <property name="font">
@@ -19,100 +19,116 @@
    <string>酒店管理系统</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="username_welcome">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>10</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>微软雅黑</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="text">
-     <string>欢迎！</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="signInBtn">
-    <property name="geometry">
-     <rect>
-      <x>1020</x>
-      <y>10</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>登录/注册</string>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="HotelList">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>150</y>
-      <width>681</width>
-      <height>531</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="HotelInfo" native="true">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>300</y>
-      <width>491</width>
-      <height>381</height>
+      <x>0</x>
+      <y>250</y>
+      <width>400</width>
+      <height>450</height>
      </rect>
     </property>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>200</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
    </widget>
-   <widget class="QTableWidget" name="FuntionTable">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>50</y>
-      <width>491</width>
-      <height>231</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="signInBtn_2">
-    <property name="geometry">
-     <rect>
-      <x>1110</x>
-      <y>10</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>登出</string>
-    </property>
-   </widget>
-   <widget class="QGroupBox" name="conditionBox">
+   <widget class="QGroupBox" name="functionGroup">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>691</width>
+      <width>400</width>
+      <height>250</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QTableWidget" name="FuntionTable">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>50</y>
+       <width>400</width>
+       <height>200</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="signInBtn">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>10</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>登录/注册</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="username_welcome">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>151</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>微软雅黑</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>欢迎！</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="signInBtn_2">
+     <property name="geometry">
+      <rect>
+       <x>300</x>
+       <y>10</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>登出</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="conditionBox">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>0</y>
+      <width>790</width>
       <height>151</height>
      </rect>
     </property>
@@ -151,8 +167,8 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>60</y>
+       <x>170</x>
+       <y>50</y>
        <width>401</width>
        <height>71</height>
       </rect>
@@ -167,13 +183,23 @@
      </property>
     </widget>
    </widget>
+   <widget class="QListWidget" name="HotelList">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>150</y>
+      <width>790</width>
+      <height>551</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1215</width>
+     <width>1200</width>
      <height>26</height>
     </rect>
    </property>
