--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,9 +23,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>250</y>
+      <y>149</y>
       <width>471</width>
-      <height>450</height>
+      <height>551</height>
      </rect>
     </property>
     <widget class="QListWidget" name="list_detail">
@@ -34,7 +34,7 @@
        <x>0</x>
        <y>49</y>
        <width>471</width>
-       <height>401</height>
+       <height>481</height>
       </rect>
      </property>
      <property name="spacing">
@@ -70,7 +70,7 @@
       <x>0</x>
       <y>0</y>
       <width>471</width>
-      <height>250</height>
+      <height>151</height>
      </rect>
     </property>
     <property name="title">
@@ -82,11 +82,23 @@
        <x>0</x>
        <y>50</y>
        <width>471</width>
-       <height>200</height>
+       <height>101</height>
       </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+     <property name="showGrid">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QPushButton" name="signInBtn">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="geometry">
       <rect>
        <x>260</x>
@@ -102,6 +114,9 @@
      </property>
      <property name="text">
       <string>登录/注册</string>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="username_welcome">
@@ -211,8 +226,11 @@
       <x>490</x>
       <y>150</y>
       <width>661</width>
-      <height>551</height>
+      <height>531</height>
      </rect>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <property name="spacing">
      <number>5</number>
