完成：搜索、筛选、addmember、新增酒店 剩余：数据库连接

--- a/hotel_pic.qrc
+++ b/hotel_pic.qrc
@@ -23,5 +23,6 @@
         <file>pic/1-豪华.png</file>
         <file>pic/11.jpg</file>
         <file>pic/1-豪华.bmp</file>
+        <file>pic/演示.jpg</file>
     </qresource>
 </RCC>
